--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,34 +20,45 @@ jobs:
           sudo bash docker/install_docker.sh;
 
 
-      - name: Build haproxy el8
-        run: |
-          sudo bash run-build-el8.sh
-          sudo systemctl stop docker.socket docker.service containerd.service
-          sudo rm -fr /var/lib/docker/*
-      - name: Upload haproxy el8
-        run: |
-          _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
-          _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
-          sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
+      #- name: Build haproxy el8
+      #  run: |
+      #    sudo bash run-build-el8.sh
+      #    sudo systemctl stop docker.socket docker.service containerd.service
+      #    sudo rm -fr /var/lib/docker/*
+      #- name: Upload haproxy el8
+      #  run: |
+      #    _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
+      #    _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
+      #    sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Build haproxy el7
-        run: |
-          sudo bash run-build-el7.sh
-          sudo systemctl stop docker.socket docker.service containerd.service
-          sudo rm -fr /var/lib/docker/*
-      - name: Upload haproxy el7
-        run: |
-          _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
-          _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
-          sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
+      #- name: Build haproxy el7
+      #  run: |
+      #    sudo bash run-build-el7.sh
+      #    sudo systemctl stop docker.socket docker.service containerd.service
+      #    sudo rm -fr /var/lib/docker/*
+      #- name: Upload haproxy el7
+      #  run: |
+      #    _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
+      #    _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
+      #    sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Build haproxy ub2004
+      #- name: Build haproxy ub2004
+      #  run: |
+      #    sudo bash run-build-ub2004.sh
+      #    sudo systemctl stop docker.socket docker.service containerd.service
+      #    sudo rm -fr /var/lib/docker/*
+      #- name: Upload haproxy ub2004
+      #  run: |
+      #    _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
+      #    _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
+      #    sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: Build haproxy ub2204
         run: |
-          sudo bash run-build-ub2004.sh
+          sudo bash run-build-ub2204.sh
           sudo systemctl stop docker.socket docker.service containerd.service
           sudo rm -fr /var/lib/docker/*
-      - name: Upload haproxy ub2004
+      - name: Upload haproxy ub2204
         run: |
           _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
           _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
