--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install docker
         run: >
           sudo apt update -y -qqq ; 
@@ -42,16 +42,16 @@ jobs:
       #    _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
       #    sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
 
-      #- name: Build haproxy ub2004
-      #  run: |
-      #    sudo bash run-build-ub2004.sh
-      #    sudo systemctl stop docker.socket docker.service containerd.service
-      #    sudo rm -fr /var/lib/docker/*
-      #- name: Upload haproxy ub2004
-      #  run: |
-      #    _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
-      #    _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
-      #    sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
+      - name: Build haproxy ub2004
+        run: |
+          sudo bash run-build-ub2004.sh
+          sudo systemctl stop docker.socket docker.service containerd.service
+          sudo rm -fr /var/lib/docker/*
+      - name: Upload haproxy ub2004
+        run: |
+          _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
+          _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
+          sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Build haproxy ub2204
         run: |
