--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,38 @@ jobs:
           sudo apt upgrade -y -qqq;
           sudo /bin/bash scripts/install-docker.sh
 
+      - name: Make output tmp
+        run: |
+          /bin/rm -fr /tmp/_output.tmp
+          mkdir /tmp/_output.tmp
+
+      - name: Build haproxy ub2004
+        run: |
+          sudo bash run-build-ub2004.sh
+          sudo systemctl stop docker.socket docker.service containerd.service
+          sudo /bin/rm -fr /var/lib/docker/* /var/lib/containerd/* /mnt/docker-data/*
+
+      - name: Generate release tag env
+        run: |
+          echo "_dateutc=$(date -u +%Y-%m-%d-%H%M)" >> $GITHUB_ENV
+
+      - name: Build haproxy ub2204
+        run: |
+          sudo bash run-build-ub2204.sh
+          sudo systemctl stop docker.socket docker.service containerd.service
+          sudo /bin/rm -fr /var/lib/docker/* /var/lib/containerd/* /mnt/docker-data/*
+
+      - name: Upload files
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ env._dateutc }}
+          files: /tmp/_output.tmp/*
+
+      - name: Delete old release tag env
+        run: |
+          sed -e "/^_dateutc=/d" -i $GITHUB_ENV
+
+
       #- name: Build haproxy el8
       #  run: |
       #    sudo bash run-build-el8.sh
@@ -42,24 +74,15 @@ jobs:
       #    _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
       #    sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Build haproxy ub2004
-        run: |
-          sudo bash run-build-ub2004.sh
-          sudo systemctl stop docker.socket docker.service containerd.service
-          sudo rm -fr /var/lib/docker/*
-      - name: Upload haproxy ub2004
-        run: |
-          _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
-          _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
-          sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Build haproxy ub2204
-        run: |
-          sudo bash run-build-ub2204.sh
-          sudo systemctl stop docker.socket docker.service containerd.service
-          sudo rm -fr /var/lib/docker/*
-      - name: Upload haproxy ub2204
-        run: |
-          _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
-          _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
-          sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
+#      - name: Upload haproxy ub2004
+#        run: |
+#          _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
+#          _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
+#          sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
+
+#      - name: Upload haproxy ub2204
+#        run: |
+#          _repo="$(echo ${{ github.repository }} | awk -F '/' '{print $2}')"
+#          _haproxy_ver="$(sudo ls -1 /home/.tmp.haproxy/haproxy-* | sed -e 's|.*haproxy-||g' -e 's|-.*||g' | tail -n1)"
+#          sudo ls -1 /home/.tmp.haproxy/haproxy-* | sudo xargs --no-run-if-empty -I '{}' sudo bash .upload_gh -f '{}' -u "${{ github.repository_owner }}" -r "${_repo}" -t "v${_haproxy_ver}" -k "${{ secrets.GITHUB_TOKEN }}"
